--- a/RMS.Repositories/RMS.Repositories.csproj
+++ b/RMS.Repositories/RMS.Repositories.csproj
@@ -55,6 +55,8 @@
     <Compile Include="EmployeeRepository.cs" />
     <Compile Include="OrganizationRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VehicleRepository.cs" />
+    <Compile Include="VehicleTypeRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
