Javascript Jquery Added in Department Form Submit

--- a/RMS.App/RMS.App.csproj
+++ b/RMS.App/RMS.App.csproj
@@ -487,6 +487,7 @@
     <Content Include="Content\scss\theme\_reset.scss" />
     <Content Include="Content\scss\theme\_variables.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\DepartmentJs\CreateDepartment.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
