--- a/RMS.Models/RMS.Models.csproj
+++ b/RMS.Models/RMS.Models.csproj
@@ -54,6 +54,7 @@
     <Compile Include="EntityModels\Designation.cs" />
     <Compile Include="EntityModels\Employee.cs" />
     <Compile Include="EntityModels\Organization.cs" />
+    <Compile Include="EntityModels\Requisition.cs" />
     <Compile Include="EntityModels\Vehicle.cs" />
     <Compile Include="EntityModels\VehicleType.cs" />
     <Compile Include="Migrations\201808011237486_InitialCreate.cs" />
@@ -72,6 +73,10 @@
     <Compile Include="Migrations\201808021759329_VehicleTypeAndVehicleAdded.Designer.cs">
       <DependentUpon>201808021759329_VehicleTypeAndVehicleAdded.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808052017544_RequisitionAdded.cs" />
+    <Compile Include="Migrations\201808052017544_RequisitionAdded.Designer.cs">
+      <DependentUpon>201808052017544_RequisitionAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -87,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808021759329_VehicleTypeAndVehicleAdded.resx">
       <DependentUpon>201808021759329_VehicleTypeAndVehicleAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808052017544_RequisitionAdded.resx">
+      <DependentUpon>201808052017544_RequisitionAdded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
