--- a/RMS.Models/RMS.Models.csproj
+++ b/RMS.Models/RMS.Models.csproj
@@ -77,6 +77,10 @@
     <Compile Include="Migrations\201808052017544_RequisitionAdded.Designer.cs">
       <DependentUpon>201808052017544_RequisitionAdded.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808071536165_Organization_Validation_added.cs" />
+    <Compile Include="Migrations\201808071536165_Organization_Validation_added.Designer.cs">
+      <DependentUpon>201808071536165_Organization_Validation_added.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -95,6 +99,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808052017544_RequisitionAdded.resx">
       <DependentUpon>201808052017544_RequisitionAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808071536165_Organization_Validation_added.resx">
+      <DependentUpon>201808071536165_Organization_Validation_added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
