--- a/RMS.App/RMS.App.csproj
+++ b/RMS.App/RMS.App.csproj
@@ -196,6 +196,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\DepartmentViewModel.cs" />
+    <Compile Include="ViewModels\DesignationViewModel.cs" />
     <Compile Include="ViewModels\OrganizationViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
