--- a/RMS.Models/RMS.Models.csproj
+++ b/RMS.Models/RMS.Models.csproj
@@ -85,6 +85,10 @@
     <Compile Include="Migrations\201808071928019_Department_Validation_added.Designer.cs">
       <DependentUpon>201808071928019_Department_Validation_added.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808072033575_Designation_Validation_added.cs" />
+    <Compile Include="Migrations\201808072033575_Designation_Validation_added.Designer.cs">
+      <DependentUpon>201808072033575_Designation_Validation_added.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -109,6 +113,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808071928019_Department_Validation_added.resx">
       <DependentUpon>201808071928019_Department_Validation_added.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808072033575_Designation_Validation_added.resx">
+      <DependentUpon>201808072033575_Designation_Validation_added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
