Employee validation added

--- a/RMS.Models/RMS.Models.csproj
+++ b/RMS.Models/RMS.Models.csproj
@@ -89,6 +89,10 @@
     <Compile Include="Migrations\201808072033575_Designation_Validation_added.Designer.cs">
       <DependentUpon>201808072033575_Designation_Validation_added.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808072107457_Employee_validation_added.cs" />
+    <Compile Include="Migrations\201808072107457_Employee_validation_added.Designer.cs">
+      <DependentUpon>201808072107457_Employee_validation_added.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -116,6 +120,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808072033575_Designation_Validation_added.resx">
       <DependentUpon>201808072033575_Designation_Validation_added.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808072107457_Employee_validation_added.resx">
+      <DependentUpon>201808072107457_Employee_validation_added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
