--- a/RMS.Repositories/RMS.Repositories.csproj
+++ b/RMS.Repositories/RMS.Repositories.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssignRequisitionRepository.cs" />
     <Compile Include="Base\Repository.cs" />
     <Compile Include="DepartmentRepository.cs" />
     <Compile Include="DesignationRepository.cs" />
