--- a/RMS.Repositories.Contracts/RMS.Repositories.Contracts.csproj
+++ b/RMS.Repositories.Contracts/RMS.Repositories.Contracts.csproj
@@ -43,10 +43,13 @@
     <Compile Include="IAssignRequisitionRepository.cs" />
     <Compile Include="IDepartmentRepository.cs" />
     <Compile Include="IDesignationRepository.cs" />
+    <Compile Include="IDistrictRepository.cs" />
+    <Compile Include="IDivisionRepository.cs" />
     <Compile Include="IEmployeeRepository.cs" />
     <Compile Include="IOrganizationRepository.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="IRequisitionRepository.cs" />
+    <Compile Include="IUpazilaRepository.cs" />
     <Compile Include="IVehicleRepository.cs" />
     <Compile Include="IVehicleTypeRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
