--- a/RMS.Repositories/RMS.Repositories.csproj
+++ b/RMS.Repositories/RMS.Repositories.csproj
@@ -53,10 +53,13 @@
     <Compile Include="Base\Repository.cs" />
     <Compile Include="DepartmentRepository.cs" />
     <Compile Include="DesignationRepository.cs" />
+    <Compile Include="DistrictRepository.cs" />
+    <Compile Include="DivisionRepository.cs" />
     <Compile Include="EmployeeRepository.cs" />
     <Compile Include="OrganizationRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequisitionRepository.cs" />
+    <Compile Include="UpazilaRepository.cs" />
     <Compile Include="VehicleRepository.cs" />
     <Compile Include="VehicleTypeRepository.cs" />
   </ItemGroup>
