Requisition Number Added in Requisition Model

--- a/RMS.Models/RMS.Models.csproj
+++ b/RMS.Models/RMS.Models.csproj
@@ -146,6 +146,10 @@
     <Compile Include="Migrations\201808132058401_Address_added.Designer.cs">
       <DependentUpon>201808132058401_Address_added.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808152225233_Requisition Number added in requisition model.cs" />
+    <Compile Include="Migrations\201808152225233_Requisition Number added in requisition model.Designer.cs">
+      <DependentUpon>201808152225233_Requisition Number added in requisition model.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -212,6 +216,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808132058401_Address_added.resx">
       <DependentUpon>201808132058401_Address_added.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808152225233_Requisition Number added in requisition model.resx">
+      <DependentUpon>201808152225233_Requisition Number added in requisition model.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
