--- a/RMS.BLL.Contracts/RMS.BLL.Contracts.csproj
+++ b/RMS.BLL.Contracts/RMS.BLL.Contracts.csproj
@@ -49,6 +49,7 @@
     <Compile Include="IManager.cs" />
     <Compile Include="IOrganizationManager.cs" />
     <Compile Include="IRequisitionManager.cs" />
+    <Compile Include="IRequisitionStatusManager.cs" />
     <Compile Include="IUpazilaManager.cs" />
     <Compile Include="IVehicleManager.cs" />
     <Compile Include="IVehicleTypeManager.cs" />
