--- a/RMS.Repositories/RMS.Repositories.csproj
+++ b/RMS.Repositories/RMS.Repositories.csproj
@@ -59,6 +59,7 @@
     <Compile Include="OrganizationRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequisitionRepository.cs" />
+    <Compile Include="RequisitionStatusRepository.cs" />
     <Compile Include="UpazilaRepository.cs" />
     <Compile Include="VehicleRepository.cs" />
     <Compile Include="VehicleTypeRepository.cs" />
