--- a/RMS.Repositories.Contracts/RMS.Repositories.Contracts.csproj
+++ b/RMS.Repositories.Contracts/RMS.Repositories.Contracts.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IAddressRepository.cs" />
     <Compile Include="IAssignRequisitionRepository.cs" />
     <Compile Include="IDepartmentRepository.cs" />
     <Compile Include="IDesignationRepository.cs" />
@@ -56,6 +57,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\RMS.Models.Contracts\RMS.Models.Contracts.csproj">
+      <Project>{F44B1413-1E46-410B-A35B-A440AE52FBC5}</Project>
+      <Name>RMS.Models.Contracts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RMS.Models\RMS.Models.csproj">
       <Project>{ec92faca-b541-4cbe-8546-767d78b56d5b}</Project>
       <Name>RMS.Models</Name>
